--- a/src/feed/Feed.css
+++ b/src/feed/Feed.css
@@ -1,28 +1,33 @@
-.feed{
-    flex: 0.4;
-    border-right: 1px solid var(--twitter-background-color);
-    min-width: fit-content;
-    overflow-y: scroll;
+.feed {
+  flex: 0.4;
+  border-right: 1px solid var(--twitter-background-color);
+  min-width: fit-content;
+  overflow-y: scroll;
+  position: relative;
+  width: 500px;
+  padding-top: 50px;
 }
- /* Hide scrollbar for Chrome, Safari and Opera */
-.feed::-webkit-scrollbar{
-    display: none;
+/* Hide scrollbar for Chrome, Safari and Opera */
+.feed::-webkit-scrollbar {
+  display: none;
 }
 /* Hide scrollbar for IE, Edge and Firefox*/
-.feed{
-    -ms-overflow-style: none; /* IE and Edge*/;
-    scrollbar-width: none;
+.feed {
+  -ms-overflow-style: none; /* IE and Edge*/
+  scrollbar-width: none;
 }
-.feed_header{
- position: sticky;
- top: 0;
- background: white;
- z-index: 100;
- border: 1px solid var(--twitter-background-color);
- padding: 15px 20px;
+.feed_header {
+  position: fixed;
+  height: 50px;
+  top: 0;
+  background: white;
+  z-index: 100;
+  border: 1px solid var(--twitter-background-color);
+  padding: 15px 20px;
+  width: 42.3%;
 }
 
-.feed_header > h2{
-    font-size: 20px;
-    font-weight: 800;
+.feed_header > h2 {
+  font-size: 20px;
+  font-weight: 800;
 }
