--- a/src/feed/Post.css
+++ b/src/feed/Post.css
@@ -1,17 +1,34 @@
 .Post {
-    display: flex;
-    align-items: flex-start;
-    border-bottom: 1px solid var(--twitter-background-color);
-    padding-bottom: 10px;
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 1px solid var(--twitter-background-color);
+  padding-bottom: 10px;
 }
-
+.post_body {
+  flex: 1;
+  padding: 10px;
+}
 .post_body > img {
   border-radius: 10px;
 }
 
-
-.post_footer{
+.post_footer {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+}
+
+.post_badge {
+  font-size: 15px !important;
+  color: var(--twitter-color);
+}
+
+.post_name_header {
+  font-weight: 600;
+  font-size: 12px;
+  color: gray;
+}
+
+.post_Avatar {
+  margin: 15px;
 }
